libs/modkit-canonical-errors/tests/ui/invalid_gts_resource_type.stderr
error[E0080]: evaluation panicked: GTS resource type must end with '~'
 --> tests/ui/invalid_gts_resource_type.rs:3:1
  |
3 | cf_modkit_errors::resource_error!(BadError, "not-a-gts-id");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_` failed inside this call
  |
note: inside `validate_gts_resource_type`
 --> src/gts_validation.rs
  |
  |     assert!(b[len - 1] == b'~', "GTS resource type must end with '~'");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
