libs/modkit-canonical-errors/tests/ui/invalid_gts_resource_type.rs
extern crate cf_modkit_errors;

cf_modkit_errors::resource_error!(BadError, "not-a-gts-id");

fn main() {}
